--- a/style.css
+++ b/style.css
@@ -9,6 +9,42 @@ a {
     margin: 0;
     padding: 0;
 }
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #181818e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+  }
+  #preloader.close {
+    opacity: 0;
+    pointer-events: none;
+  }
+   
+  .spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #cccccc;
+    border-top-color: #1a1a1a;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+   
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
 ul {
     list-style: none;
